--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "build:dev": "webpack --mode=development; mv dist docs; rm -rf dist",
+        "build:dev": "rm -rf dist docs; webpack --mode=development; mv dist docs;",
+        "build:prod": "rm -rf dist docs; webpack --mode=production; mv dist docs;",
         "start": "open dist/index.html"
     },
     "devDependencies": {
+        "css-loader": "^6.5.1",
         "html-loader": "^3.0.1",
         "html-webpack-plugin": "^5.5.0",
         "mini-css-extract-plugin": "^2.4.5",
+        "style-loader": "^3.3.1",
         "webpack": "^5.65.0",
         "webpack-cli": "^4.9.1"
     }
